# nemotron

./: .gitignore  Makefile  adapter-validation-notebook.py  benchmark_solvers.py  corpus.py  download_kaggle.py  dynamic_sampler.py  env.json.example  index.html  kaggle_config.json  kaggle_utils.py  notebook_tinker.py  problems.jsonl  push_notebook.py  push_validation.py  pyproject.toml  reasoning.py  test_dynamic_sampler.py  test_notebook_metadata.py  train_common.py  train_sft.py  upload_adapter.py
corpus/00021b51/: synthetic.jsonl
corpus/00066667/: synthetic.jsonl
corpus/0012cd1f/: synthetic.jsonl
corpus/00189f6a/: synthetic.jsonl
corpus/001c63cb/: synthetic.jsonl
corpus/001e4e8f/: synthetic.jsonl
corpus/00209eb5/: synthetic.jsonl
docs/: dynamic_scheduling_plan.md
notebooks_meta/: adapter_validation.json  notebook_tinker.json
problems/: 00457d26.jsonl  00c032a8.jsonl  00d8b3db.jsonl  012cab1f.jsonl  0133bcec.jsonl  017a871e.jsonl  01b2aa67.jsonl  01cd504a.jsonl  01ef1e3e.jsonl  022c4d73.jsonl  026106f5.jsonl  02664ad5.jsonl  02902eb3.jsonl  02a04b59.jsonl  02b8d816.jsonl  02c15453.jsonl  02e871e4.jsonl  035c4c40.jsonl  03a3437f.jsonl  03f07b43.jsonl  04171e29.jsonl  042f1e53.jsonl  04322d27.jsonl  0454705a.jsonl  047c4111.jsonl  0505ab22.jsonl  05109055.jsonl  053b4c86.jsonl  053f4545.jsonl  055a8b01.jsonl  05bd2dab.jsonl  05c36467.jsonl  06083e68.jsonl  0625f633.jsonl  0641ef58.jsonl  065abaf6.jsonl  065f9dea.jsonl  078df00e.jsonl  07aef27f.jsonl  07b440f0.jsonl  (+1515 more)
reasoners/: bit_manipulation_infer.py  bit_manipulation_tt.py
(+26061 files in other folders)
