[project]
name = "claude-code-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub>=1.0.0",
    "modal>=1.4.1",
    "pydantic>=2.12.1",
    "requests>=2.33.1",
    "tokenizers>=0.22.2",
    "transformers>=5.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
testpaths = [".claude"]
